--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Required meta tags-->
   <meta charset="utf-8">
@@ -22,7 +21,6 @@
   <!-- CSS Color scheme-->
   <link id="color-scheme" rel="stylesheet" href="css/main-redpink.css">
 </head>
-
 <body class="theme-dark">
   <!-- Preloader-->
   <div class="preloader">
@@ -33,21 +31,23 @@
   </div>
   <div id="overlay-effect"></div>
   <!-- Navbar-->
-  <nav class="navbar-expand-md navbar fixed-top" id="navbar"><a class="navbar-brand" data-scroll="" href="#home-area">
+  <nav class="navbar-expand-md navbar fixed-top" id="navbar">
+    <a class="navbar-brand" data-scroll="" href="#home-area">
       <!-- Navbar Logo-->
-      <img class="img-fluid" src="img/img-kitzu-logo.png" alt="Logo"></a>
+      <div class="brand"><i class="fas fa-hashtag"></i>amza</div>
+    </a>
     <span class="navbar-menu ml-auto collapsed" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span
-        class="btn-line"></span></span>
-    <div class="navbar-collapse order-1 order-lg-0 collapse" id="navbarSupportedContent" style="">
-      <!-- Navbar menu-->
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span
+      class="btn-line"></span></span>
+  <div class="navbar-collapse order-1 order-lg-0 collapse" id="navbarSupportedContent" style="">
+    <!-- Navbar menu-->
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+      <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+    </ul>
+  </div>
   </nav>
   <!-- Home-->
   <section class="home-area element-cover-bg" id="home" style="background-image:url(img/Home.jpg)">
@@ -55,9 +55,10 @@
       <div class="row h-100 align-items-center justify-content-start">
         <div class="col-12 col-lg-8 home-content text-start">
           <h1 class="home-name">Hamza <span>Fatouh</span></h1>
-          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline">
-              <b class="is-visible">Web Developer</b><b>Mobile App Developer</b><b>UI/UX Designer</b><b>Freelancer</b>
-            </span>
+          <h4 class="cd-headline clip home-headline"
+          >I’m a <span class="cd-words-wrapper single-headline">
+                  <b class="is-visible">Web Developer</b><b>Mobile App Developer</b><b>UI/UX Designer</b><b>Freelancer</b>
+                </span>
           </h4>
         </div>
       </div>
@@ -67,17 +68,13 @@
       <div class="fixed-block block-right">
         <ul class="list-unstyled social-icons">
           <li><a href="https://github.com/hamza-fatouh"><i class="fab fa-github-square fa-2x"></i></a></li>
-          <li><a
-              href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
-                class="fab fa-linkedin fa-2x"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i
-                class="fab fa-facebook-square fa-2x"></i></a></li>
-          <li><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i
-                class="fab fa-instagram fa-2x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+          <li><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i class="fab fa-instagram fa-2x"></i></a></li>
         </ul>
       </div>
     </div>
-
+    
   </section>
   <!-- About lightbox-->
   <div class="lightbox-wrapper" id="about" data-simplebar>
@@ -136,17 +133,10 @@
                         class="btn content-download button-main button-scheme" href="CV/Hamza Fattouh CV-1.pdf"
                         role="button" target="_parent">Open CV</a>
                       <ul class="list-unstyled list-inline content-follow">
-                        <li class="list-inline-item"><a href="https://github.com/hamza-fatouh"><i
-                              class="icon ion-logo-github"></i></a></li>
-                        <li class="list-inline-item"><a
-                            href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
-                              class="icon ion-logo-linkedin"></i></a></li>
-                        <li class="list-inline-item"><a
-                            href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i
-                              class="icon ion-logo-facebook"></i></a></li>
-                        <li class="list-inline-item"><a
-                            href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i
-                              class="icon ion-logo-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/hamza-fatouh"><i class="icon ion-logo-github"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="icon ion-logo-linkedin"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i class="icon ion-logo-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i class="icon ion-logo-instagram"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -387,8 +377,7 @@
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p3/img1.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Fresh Zone UI UX Design</h6><span class="content-more">More
-                          Info</span>
+                        <h6 class="content-title">Fresh Zone UI UX Design</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </div>
@@ -418,8 +407,7 @@
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p6/img1.png">
                       <div class="item-content">
-                        <h6 class="content-title">Collage competitions Management</h6><span class="content-more">More
-                          Info</span>
+                        <h6 class="content-title">Collage competitions Management</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </div>
@@ -606,5 +594,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
-
 </html>
