fix & add project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Required meta tags-->
   <meta charset="utf-8">
@@ -21,6 +22,7 @@
   <!-- CSS Color scheme-->
   <link id="color-scheme" rel="stylesheet" href="css/main-redpink.css">
 </head>
+
 <body class="theme-dark">
   <!-- Preloader-->
   <div class="preloader">
@@ -36,18 +38,22 @@
       <!-- Navbar Logo-->
       <div class="brand"><i class="fas fa-hashtag"></i>amza</div>
     </a>
-    <span class="navbar-menu ml-auto collapsed" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span
-      class="btn-line"></span></span>
-  <div class="navbar-collapse order-1 order-lg-0 collapse" id="navbarSupportedContent" style="">
-    <!-- Navbar menu-->
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-      <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-    </ul>
-  </div>
+
+    <span class="navbar-menu ml-auto" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button">
+      <span class="btn-line">
+      </span>
+    </span>
+    
+    <div class="collapse navbar-collapse order-1 order-lg-0" id="navbarSupportedContent">
+      <!-- Navbar menu-->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </nav>
   <!-- Home-->
   <section class="home-area element-cover-bg" id="home" style="background-image:url(img/Home.jpg)">
@@ -55,11 +61,10 @@
       <div class="row h-100 align-items-center justify-content-start">
         <div class="col-12 col-lg-8 home-content text-start">
           <h1 class="home-name">Hamza <span>Fatouh</span></h1>
-          <h4 class="cd-headline clip home-headline"
-          >I’m a <span class="cd-words-wrapper single-headline">
-                  <b class="is-visible">Web Developer</b><b>Mobile App Developer</b><b>UI/UX Designer</b><b>Freelancer</b>
-                </span>
-          </h4>
+          <h5 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline">
+              <b class="is-visible">Web Developer</b><b>UI/UX Designer</b><b>Freelancer</b>
+            </span>
+          </h5>
         </div>
       </div>
     </div>
@@ -68,13 +73,17 @@
       <div class="fixed-block block-right">
         <ul class="list-unstyled social-icons">
           <li><a href="https://github.com/hamza-fatouh"><i class="fab fa-github-square fa-2x"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin fa-2x"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-          <li><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i class="fab fa-instagram fa-2x"></i></a></li>
+          <li><a
+              href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                class="fab fa-linkedin fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i
+                class="fab fa-facebook-square fa-2x"></i></a></li>
+          <li><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i
+                class="fab fa-instagram fa-2x"></i></a></li>
         </ul>
       </div>
     </div>
-    
+
   </section>
   <!-- About lightbox-->
   <div class="lightbox-wrapper" id="about" data-simplebar>
@@ -133,10 +142,17 @@
                         class="btn content-download button-main button-scheme" href="CV/Hamza Fattouh CV-1.pdf"
                         role="button" target="_parent">Open CV</a>
                       <ul class="list-unstyled list-inline content-follow">
-                        <li class="list-inline-item"><a href="https://github.com/hamza-fatouh"><i class="icon ion-logo-github"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="icon ion-logo-linkedin"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i class="icon ion-logo-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i class="icon ion-logo-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/hamza-fatouh"><i
+                              class="icon ion-logo-github"></i></a></li>
+                        <li class="list-inline-item"><a
+                            href="https://www.linkedin.com/in/hamza-fatouh-912bb4268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                              class="icon ion-logo-linkedin"></i></a></li>
+                        <li class="list-inline-item"><a
+                            href="https://www.facebook.com/profile.php?id=61557575417785&mibextid=JRoKGi"><i
+                              class="icon ion-logo-facebook"></i></a></li>
+                        <li class="list-inline-item"><a
+                            href="https://www.instagram.com/h_a_m_z_a_29_?igsh=MW1xdnYyMHBwY3I4Mw=="><i
+                              class="icon ion-logo-instagram"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -329,14 +345,13 @@
             <div class="portfolio-section single-section">
               <div class="row">
                 <!-- Filter nav-->
-                <!-- <div class="col-12">
+                <div class="col-12">
                   <ul class="list-inline filter-control" role="group" aria-label="Filter Control">
                     <li class="list-inline-item tab-active" data-filter="*">All</li>
                     <li class="list-inline-item" data-filter=".web">Web</li>
                     <li class="list-inline-item" data-filter=".design">UI/UX Design</li>
-                    <li class="list-inline-item" data-filter=".mobileapp">Mobile application</li>
                   </ul>
-                </div> -->
+                </div>
               </div>
               <!-- Thumbnail list-->
               <div class="portfolio-grid row">
@@ -344,7 +359,7 @@
                 <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
                       'Gridx (School Management System)', 'Developed a comprehensive system to manage student records, attendance, and grading. Developed by (React.js, Node.js, SQL)',
-                      'img/p1/img1.jpeg', 'img/p1/img2.jpeg' , 'img/p1/img3.jpeg'
+                      'none','img/p1/img1.jpeg', 'img/p1/img2.jpeg' , 'img/p1/img3.jpeg'
                       )">
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p1/img1.jpeg">
@@ -358,7 +373,7 @@
                 <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
                     'Metro Routes Guide', 'Using algorithms and solve problem skill I created a program that take the start and the final stations and output the shortest way with giving you each station you will pass. Developed by (JavaScript, react.js) ',
-                    'img/p2/img1.png', 'img/p2/img2.png' , 'img/p2/img3.png', 'img/p2/img4.png', 'img/p2/img5.png'
+                    'none','img/p2/img1.png', 'img/p2/img2.png' , 'img/p2/img3.png', 'img/p2/img4.png', 'img/p2/img5.png'
                     )">
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p2/img1.png">
@@ -372,12 +387,13 @@
                 <div class="single-item col-12 col-lg-6 design">
                   <div class="portfolio-item" onclick="showPopup(
                     'Fresh Zone UI UX Design', 'a beautifully designed app with a modern, responsive interface. Enjoy seamless navigation and a visually appealing layout that makes plant care effortless. Fresh Zone\'s UI/UX design ensures an engaging and intuitive user experience.',
-                    'img/p3/img1.jpg', 'img/p3/img2.jpg'
+                    'none','img/p3/img1.jpg', 'img/p3/img2.jpg'
                     )">
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p3/img1.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Fresh Zone UI UX Design</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Fresh Zone UI UX Design</h6><span class="content-more">More
+                          Info</span>
                       </div>
                     </div>
                   </div>
@@ -386,7 +402,7 @@
                 <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
                     'Dern Support (Solution System web application)', 'A website application to solve different clients\' services, taking request from client to admin, admin change the state of requests to (waiting, accept or refused). the software developed by laravel',
-                    'img/p4/img1.jpeg', 'img/p4/img2.jpeg' , 'img/p4/img3.jpeg', 'img/p4/img4.jpeg',
+                    'none', 'img/p4/img1.jpeg', 'img/p4/img2.jpeg' , 'img/p4/img3.jpeg', 'img/p4/img4.jpeg',
                     'img/p4/img5.jpeg', 'img/p4/img6.jpeg' , 'img/p4/img7.jpeg', 'img/p4/img8.jpeg'
                     )">
                     <div class="portfolio-wrapper">
@@ -400,14 +416,15 @@
                 <!-- Single item-->
                 <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
-                    'Collage competitions Management', 'Developed a Tournament Scoring System for managing college competitions, featuring user authentication, real-time leaderboards, and automated result calculations using HTML, CSS, JavaScript, React, Node.js, Express, and MongoDB. Successfully managed multiple events with over 100 participants, improving efficiency and user experience.',
+                    'Collage competitions Management', 'Developed a Tournament Scoring System for managing college competitions, featuring user authentication, real-time leaderboards, and automated result calculations using HTML, CSS, JavaScript, React, Node.js, Express, and MongoDB. Successfully managed multiple events with over 100 participants, improving efficiency and user experience.', 'none',
                     'img/p6/img1.png', 'img/p6/img2.png' , 'img/p6/img3.png',
                     'img/p6/img4.png', 'img/p6/img5.png' , 'img/p6/img6.png'
                     )">
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p6/img1.png">
                       <div class="item-content">
-                        <h6 class="content-title">Collage competitions Management</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Collage competitions Management</h6><span class="content-more">More
+                          Info</span>
                       </div>
                     </div>
                   </div>
@@ -415,7 +432,7 @@
                 <!-- Single item-->
                 <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
-                    'Banking System', 'Created a simulated banking system with features like account creation, fund transfers, and transaction history. Designed by (Figma) and Developed by (HTML, CSS, Bootstrap, PHP)',
+                    'Banking System', 'Created a simulated banking system with features like account creation, fund transfers, and transaction history. Designed by (Figma) and Developed by (HTML, CSS, Bootstrap, PHP)', 'none',
                     'img/p7/img1.png', 'img/p7/img2.png' , 'img/p7/img3.png',
                     'img/p7/img4.png', 'img/p7/img5.png' , 'img/p7/img6.png'
                     )">
@@ -430,7 +447,7 @@
                 <!-- Single item-->
                 <div class="single-item col-12 col-lg-6 design">
                   <div class="portfolio-item" onclick="showPopup(
-                    'Blog', 'A Simple blog web application.',
+                    'Blog', 'A Simple blog web application.', 'none',
                     'img/p8/img1.png', 'img/p8/img2.png' , 'img/p8/img3.png'
                     )">
                     <div class="portfolio-wrapper">
@@ -442,23 +459,15 @@
                   </div>
                 </div>
                 <!-- Single item-->
-                <div class="single-item col-12 col-lg-6 mobileapp">
-                  <div class="portfolio-item">
+                <div class="single-item col-12 col-lg-6 design">
+                  <div class="portfolio-item" onclicks="showPopup(
+                    'Xhome', 'Furniture web application.', 'https:\/\/xhome-eg.com/',
+                    'img/p9/img1.png', 'img/p9/img2.png' , 'img/p9/img3.png'
+                    )">
                     <div class="portfolio-wrapper">
-                      <img class="img-fluid" alt="Item" src="img/coming soon/mobile.png">
+                      <img class="img-fluid" alt="Item" src="img/p9/img1.png">
                       <div class="item-content">
-                        <h6 class="content-title">Mobile App</h6>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Single item-->
-                <div class="single-item col-12 col-lg-6 web">
-                  <div class="portfolio-item">
-                    <div class="portfolio-wrapper">
-                      <img class="img-fluid" alt="Item" src="img/coming soon/web.png">
-                      <div class="item-content">
-                        <h6 class="content-title">Web application</h6>
+                        <h6 class="content-title">Blog</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </div>
@@ -469,11 +478,11 @@
         </div>
       </div>
     </div>
-    <div id="popup" class="popup">
-      <div class="popup-content">
+    <div id="popup" class="popup" onclick="closePopup()">
+      <div class="popup-content" onclick="event.stopPropagation()">
         <span class="close-btn" onclick="closePopup()"><i class="fas fa-times"></i></span>
         <div id="carousel" class="carousel">
-          <img id="carousel-img" class="carousel-img" src="img/p1/img1.jpeg" alt="Project Image">
+          <img id="carousel-img" class="carousel-img" src="" alt="Project Image">
           <div class="carousel-controls">
             <div onclick="prevImage()">&#10094;</div>
             <div onclick="nextImage()">&#10095;</div>
@@ -481,6 +490,7 @@
         </div>
         <h3 id="popup-title"></h3>
         <p id="popup-description"></p>
+        <a id="opt-link" href="" style="display: none;">View</a>
         <!-- <a id="popup-link" href="#" target="_blank" class="popup-link btn-custom">View on GitHub</a> -->
       </div>
     </div>
@@ -585,13 +595,19 @@
   <!-- Scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/imagesloaded.pkgd.min.js"></script>
+  <script src="js/isotope.pkgd.min.js"></script>
   <script src="js/animatedModal.js"></script>
+  <script src="js/tiny-slider.js"></script>
   <script src="js/lity.min.js"></script>
   <script src="js/simplebar.min.js"></script>
+  <script src="js/jquery.mb.YTPlayer.min.js"></script>
   <script src="js/main.js"></script>
+  <!-- Custom JS (Add your custom JS scripts to this file)-->
   <script src="js/custom.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <!-- removeIf(customizerDist)-->
+  <script src="../customizer/main.js"></script>
+  <!-- endremoveIf(customizerDist)-->
 </body>
+
 </html>
