--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 </div>
                 <!-- Single item-->
                 <div class="single-item col-12 col-lg-6 design">
-                  <div class="portfolio-item" onclicks="showPopup(
+                  <div class="portfolio-item" onclick="showPopup(
                     'Xhome', 'Furniture web application.', 'https:\/\/xhome-eg.com/',
                     'img/p9/img1.png', 'img/p9/img2.png' , 'img/p9/img3.png'
                     )">
