--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                   </div>
                 </div>
                 <!-- Single item-->
-                <div class="single-item col-12 col-lg-6 design">
+                <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
                     'Blog', 'A Simple blog web application.', 'none',
                     'img/p8/img1.png', 'img/p8/img2.png' , 'img/p8/img3.png'
@@ -459,7 +459,7 @@
                   </div>
                 </div>
                 <!-- Single item-->
-                <div class="single-item col-12 col-lg-6 design">
+                <div class="single-item col-12 col-lg-6 web">
                   <div class="portfolio-item" onclick="showPopup(
                     'Xhome', 'Furniture web application.', 'https:\/\/xhome-eg.com/',
                     'img/p9/img1.png', 'img/p9/img2.png' , 'img/p9/img3.png'
@@ -467,7 +467,21 @@
                     <div class="portfolio-wrapper">
                       <img class="img-fluid" alt="Item" src="img/p9/img1.png">
                       <div class="item-content">
-                        <h6 class="content-title">Blog</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Xhome</h6><span class="content-more">More Info</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single item-->
+                <div class="single-item col-12 col-lg-6 web">
+                  <div class="portfolio-item" onclick="showPopup(
+                    'We Security', 'We Security Frontend Web Application.', 'none',
+                    'img/p10/img1.png', 'img/p10/img2.png', 'img/p10/img3.png'
+                    )">
+                    <div class="portfolio-wrapper">
+                      <img class="img-fluid" alt="Item" src="img/p10/img1.png">
+                      <div class="item-content">
+                        <h6 class="content-title">We Security</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </div>
